k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-service
  namespace: aceest-fitness
  labels:
    app: aceest-fitness
spec:
  selector:
    app: aceest-fitness
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
